<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/listconfigroute"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_routeconfig"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/listconfigIp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_ipconfig"
            android:textColor="#ffffff"/>
        <Button
            android:id="@+id/listconfigfrepower"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_frequpowerconfig"
            android:textColor="#ffffff"/>

    </LinearLayout>

</RelativeLayout>