<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp">

        <!--当前IP地址-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:textSize="10sp"
            android:text="@string/str_currentip"
            />

        <EditText
            android:id="@+id/currentip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:background="#98FB98"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#3000"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp">

        <!--当前子网掩码-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:textSize="10sp"
            android:text="@string/str_currentmask"
            />

        <EditText
            android:id="@+id/currentmask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:background="#98FB98"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#3000"/>

    <!--查询-->
    <Button
        android:id="@+id/ipconfigquery"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:onClick="onClick"
        android:text="@string/str_query"
        android:textColor="#ffffff"/>
    <!--修改-->
    <Button
        android:id="@+id/ipconfigmodify"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:onClick="onClick"
        android:text="@string/str_modified"
        android:textColor="#ffffff"/>

</LinearLayout>

</RelativeLayout>