<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/str_hostname"
                />

            <EditText
                android:id="@+id/loginipaddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--端口-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/str_port"
                />

            <EditText
                android:id="@+id/loginport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>


        <!--用户名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/str_username"
                />

            <EditText
                android:id="@+id/loginuserid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--密码-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/str_pwd"
                />

            <EditText
                android:id="@+id/loginpwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--按钮-->
        <Button
            android:id="@+id/logincon"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_connection"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/logincancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_back"
            android:textColor="#ffffff"/>

    </LinearLayout>

</RelativeLayout>