<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <!--路由标识-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:text="@string/str_routeid"
                />

            <EditText
                android:id="@+id/routeidentifier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--目的IP地址-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:text="@string/str_destiipaddr"
                />

            <EditText
                android:id="@+id/destIp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>


        <!--目的子网掩码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:text="@string/str_destimask"/>

            <EditText
                android:id="@+id/destMask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--下一跳IP地址-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:textSize="10sp"
                android:text="@string/str_nexthopip"
                />

            <EditText
                android:id="@+id/nextJuIp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--查询-->
        <Button
            android:id="@+id/routeconfigquery"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_query"
            android:textColor="#ffffff"/>
        <!--修改-->
        <Button
            android:id="@+id/routeconfigmodify"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_modified"
            android:textColor="#ffffff"/>

    </LinearLayout>

</RelativeLayout>