<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <!--本小区标识-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="2"
                android:text="@string/str_localid"
                android:textSize="10sp"
                />

            <EditText
                android:id="@+id/frepowercellid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--中心频率-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="2"
                android:text="@string/str_centerfre"
                android:textSize="10sp"
                />

            <EditText
                android:id="@+id/frepowercenterfre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--带宽(M)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="2"
                android:text="@string/str_band"
                android:textSize="10sp"/>

            <EditText
                android:id="@+id/frepowerband"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--发射总功率(W)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="2"
                android:text="@string/str_totalpower"
                android:textSize="10sp"
                />

            <EditText
                android:id="@+id/frepowertopower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#98FB98"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#3000"/>

        <!--查询-->
        <Button
            android:id="@+id/freqpowquery"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_query"
            android:textColor="#ffffff"/>
        <!--修改-->
        <Button
            android:id="@+id/freqpowmodify"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:text="@string/str_modified"
            android:textColor="#ffffff"/>

    </LinearLayout>

</RelativeLayout>